<resources>
    <string name="app_name">Login Page</string>
    <string name="login_signup">Login/Signup</string>
    <string name="email_mobile">Email/Mobile</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="signup_page">SignUp Page</string>
    <string name="login_page">Login Page</string>
    <string name="your_name">Your Name</string>
    <string name="back">Back</string>


</resources>