<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    >



    <LinearLayout
        android:id="@+id/lytLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/circle_progress"
            android:layout_marginEnd="@dimen/circle_progress"
            android:background="@drawable/signup_top"
            android:gravity="center"
            android:id="@+id/textview"
            android:padding="12dp"
            android:text="@string/signup_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="@dimen/margin_10dp"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/black"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical"
                android:padding="@dimen/margin_dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputNsame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/your_name"
                        android:inputType="text"
                        android:drawableLeft="@drawable/ic_baseline_account_box_24"
                        android:drawableStart="@drawable/ic_baseline_account_box_24"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/email_mobile"
                        android:drawableLeft="@drawable/ic_baseline_email_24"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"

                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputPass"
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawableLeft="@drawable/ic_baseline_lock_24"
                        android:drawableStart="@drawable/ic_baseline_lock_24"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                </com.google.android.material.textfield.TextInputLayout>



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Button

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/right_btn_bg"
                        android:gravity="center"

                        android:padding="7dp"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:id="@+id/signup_btn"
                        android:textColor="@color/white"
                        android:textSize="@dimen/mid_text"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/signupbutton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_10dp"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:layout_weight="1"
                        android:background="@drawable/left_btn_bg"
                        android:gravity="center"
                        android:padding="7dp"
                        android:onClick="onclicked_back_btn"
                        android:text="@string/back"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/mid_text"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</RelativeLayout>